# mtio-rs

./: Cargo.toml  README.md
src/: device.rs  error.rs  ioctl.rs  lib.rs  mock.rs  status.rs
tests/: hardware.rs
