[package]
name = "mtio"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Linux magnetic tape device I/O — safe bindings for the SCSI tape driver ioctl interface"
repository = "https://github.com/dc-ja/mtio-rs"
keywords = ["tape", "scsi", "ioctl", "linux", "backup"]
categories = ["os::unix-apis", "hardware-support"]
rust-version = "1.74"

[package.metadata.docs.rs]
# Build on Linux so that TapeDevice, MT* constants, and all linux-gated items
# are included in the rendered documentation.
targets = ["x86_64-unknown-linux-gnu"]
# Show MockTape in the public docs as well.
features = ["mock"]

[features]
# Expose MockTape for use in other crates' test suites
mock = []
# Enable integration tests against a real tape drive (requires Linux + hardware)
hardware = []

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["ioctl"] }

[dependencies]
bitflags = "2.11.1"
thiserror = "2"
